# CompaniesHouse

./: .gitignore  README.md  classes.py  db.py  ingest.sh  main.py  psc.py  pyproject.toml  ukch.db-journal  ukchLoader.py  ukch_2.db
IngestFiles/: __init__.py  company.py  main.py  psc.py
app/: main.py
app/templates/: index.html
data_models/: __init__.py  bods_conversion.py  company.py  psc.py  util.py
db/: __init__.py  sqlite_db.py
models/: company.py  psc.py
sql/: create_companies_table.sql  create_psc_table.sql  fetch_all_psc.sql  get_all_companies.sql  get_company.sql  get_psc.sql  indexes.sql  insert_companies.sql  insert_psc.sql  join_psc_company.sql
src/: __init__.py  config.py  main.py
src/Ingestor/: company.py  company_ingestor.py  main.py  psc.py  psc_ingestor.py  router.py
src/data_models/: __init__.py  bods.py  psc.py  util.py
src/db/: postgres_db.py  sqlite_db.py
src/models/: __init__.py  bods_conversion.py  company.py  psc.py  util.py
src/schemas/: address.py  company.py  psc.py  utils.py
src/search/: router.py
static/: index.js  render_bods.js
templates/: 404.html  index.html  platform.html  result.html
