[tool.poetry]
name = "pip install poetry"
version = "0.1.0"
description = ""
authors = ["Albin Touma <albin.touma@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.3.1"
psycopg2 = "^2.9.10"
tqdm = "^4.67.1"
fastapi = {extras = ["standard"], version = "^0.117.1"}
Jinja2 = "^3.1.6"
fastapi-cli = "^0.0.10"
python-multipart = "^0.0.20"
sqlmodel = "^0.0.27"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
